Fixed the navigation issue for english version

--- a/en/warhammer40k_en.html
+++ b/en/warhammer40k_en.html
@@ -35,10 +35,10 @@
                             
                         </li>
                         <li>
-                            <a href="warhammer40k.html" class="nav_link">Warhammer 40k</a>
+                            <a href="warhammer40k_en.html" class="nav_link">Warhammer 40k</a>
                         </li>
                         <li>
-                            <a href="oldworld.html" class="nav_link">The Old Word</a>
+                            <a href="oldworld_en.html" class="nav_link">The Old Word</a>
                         </li>
                         <li>
                             <a href="#contact" class="nav_link">Contact</a>
