Chaged text to 40k singles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index, follow" />
         <meta name="googlebot" content="index, follow" />
 
-        <meta name="description" content="Prague GT je týmový kompetetivní turnaj pro pětičlenné týmy a tříčlenné v rámci The Old World. Uskuteční se 7. - 8. 3. 2026 v Praze v hale kousek od Metra Želivského. Turnaj se uskuteční dle pravidel WTC včetně map packu. Předpokládaná kapacita je 20 týmů pro Warhammer 40.000 a 24 týmů pro The Old World.">
+        <meta name="description" content="Prague GT je turnaj pro jednotlivce v rámci Warhammer 40.000 a tříčlenné týmy v rámci The Old World. Uskuteční se 7. - 8. 3. 2026 v Praze v hale kousek od Metra Želivského. Turnaj se uskuteční dle pravidel WTC včetně map packu. Předpokládaná kapacita je 20 hráčů pro Warhammer 40.000 a 24 týmů pro The Old World.">
 
         <meta name="keywords" content="Prague GT, Prague GT 2026, Warhammer 40,000 turnaj Praha, Warhammer The Old World turnaj, WTC pravidla Warhammer, týmový Warhammer turnaj, Warhammer turnaj Česká republika, mezinárodní Warhammer turnaj Praha, Warhammer 40K Prague GT, Warhammer The Old World Prague GT, turnaj Warhammer Praha březen 2026, Warhammer akce Praha 2026, Warhammer soutěž Česká republika, registrace Warhammer turnaj Praha, Warhammer streaming turnaj">
 
