Links are now reasonable

--- a/en/index_en.html
+++ b/en/index_en.html
@@ -177,10 +177,10 @@
                             <img src="../assets/img/dice1.png" alt="" class="img_cover">
                             <h3 class="bio">Prague Grand Tournament</h3>
 
-                            <p class="bio_desc"> Prague GT is a team competitive tournament for five-member teams and three-member teams within The Old World. It will take place on March 7–8, 2026 in Prague in a hall near the Želivského Metro. The tournament will take place according to the WTC rules, including the map pack. The expected capacity is 20 teams for Warhammer 40,000 and 24 teams for The Old World.
+                            <p class="bio_desc">Prague GT is a team competitive tournament for five-member teams and three-member teams within The Old World. It will take place on March 7–8, 2026 in Prague in a hall near the Želivského Metro. The tournament will take place according to the WTC rules, including the map pack. The expected capacity is 20 teams for Warhammer 40,000 and 24 teams for The Old World.
                             </p>
 
-                            <p class="bio_desc">Registration and proposals will be published in the coming weeks.</p>
+                            <p class="bio_desc"><a href="https://www.bestcoastpairings.com/event/tL2EixmZZ4PM" target="_blank" class="registration-link">Registration for the 40k event</a> is already open, and the tournament pack will be published in the coming weeks.</p>
 
                             <p class="bio_desc">Our goal is to create a series of regular tournaments at the World/European standard. The rewards for players will be completely original trophies, participation of foreign teams, quality organization, unique premises, tournament restaurant, referees supervising the games, and streaming of selected games.</p>
 
