--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index, follow" />
         <meta name="googlebot" content="index, follow" />
 
-        <meta name="description" content="Prague GT je turnaj pro jednotlivce v rámci Warhammer 40.000 a tříčlenné týmy v rámci The Old World. Uskuteční se 7. - 8. 3. 2026 v Praze v hale kousek od Metra Želivského. Turnaj se uskuteční dle pravidel WTC včetně map packu. Předpokládaná kapacita je 20 hráčů pro Warhammer 40.000 a 24 týmů pro The Old World.">
+        <meta name="description" content="Prague GT je Warhammer 40.000 turnaj jednotlivců a The Old World tříčlenných týmů. Uskuteční se 7. - 8. 3. 2026 v Praze v hale kousek od Metra Želivského. Turnaj se uskuteční dle pravidel WTC včetně map packu. Předpokládaná kapacita je 120 hráčů pro Warhammer 40.000 a 24 týmů pro The Old World.">
 
         <meta name="keywords" content="Prague GT, Prague GT 2026, Warhammer 40,000 turnaj Praha, Warhammer The Old World turnaj, WTC pravidla Warhammer, týmový Warhammer turnaj, Warhammer turnaj Česká republika, mezinárodní Warhammer turnaj Praha, Warhammer 40K Prague GT, Warhammer The Old World Prague GT, turnaj Warhammer Praha březen 2026, Warhammer akce Praha 2026, Warhammer soutěž Česká republika, registrace Warhammer turnaj Praha, Warhammer streaming turnaj">
 
@@ -177,10 +177,10 @@
                             <img src="assets/img/dice1.png" alt="" class="img_cover">
                             <h3 class="bio">Prague Grand Tournament</h3>
 
-                            <p class="bio_desc">Prague GT je týmový kompetetivní turnaj pro pětičlenné týmy a tříčlenné v rámci The Old World. Uskuteční se 7. - 8. 3. 2026 v Praze v hale kousek od Metra Želivského. Turnaj se uskuteční dle pravidel WTC včetně map packu. Předpokládaná kapacita je 20 týmů pro Warhammer 40.000 a 24 týmů pro The Old World.
+                            <p class="bio_desc">Prague GT je Warhammer 40.000 turnaj jednotlivců a The Old World tříčlenných týmů. Uskuteční se 7. - 8. 3. 2026 v Praze v hale kousek od Metra Želivského. Turnaj se uskuteční dle pravidel WTC včetně map packu. Předpokládaná kapacita je 20 týmů pro Warhammer 40.000 a 24 týmů pro The Old World.
                             </p>
 
-                            <p class="bio_desc">Registrace a propozice budou zveřejneny v následujících týdnech.</p>
+                            <p class="bio_desc"><a href="https://www.bestcoastpairings.com/event/tL2EixmZZ4PM" target="_blank" class="registration-link">Registrace pro 40k</a> je již otevřena a propozice budou zveřejneny v následujících týdnech.</p>
 
                             <p class="bio_desc">Naším cílem je vytvořit sérii pravidelných turnajů na úrovni Světového/Evropského standartu. Odměnou pro hráče pak budou zcela originální trofeje ,účast zahraničních týmů, kvalitní organizace , unikátní prostory, turnajova restaurace, na hry budou dohlížet rozhodčí, streaming vybraných her.</p>
 
