Updated registration info for TOW

--- a/en/index_en.html
+++ b/en/index_en.html
@@ -197,13 +197,21 @@
               </p>
 
               <p class="bio_desc">
+                Registrations for both
                 <a
                   href="https://www.bestcoastpairings.com/event/tL2EixmZZ4PM"
                   target="_blank"
                   class="registration-link"
-                  >Registration for the 40k event</a
+                  >Warhammer 40,000</a
                 >
-                is already open, and the tournament pack will be published in the coming weeks.
+                and
+                <a
+                  href="https://www.newrecruit.eu/app/tournydetails/details?id=690b9f3b53abb444afa2759f"
+                  target="_blank"
+                  class="registration-link"
+                  >The Old World</a
+                >
+                are already open, and the tournament packs will be published in the coming weeks.
               </p>
 
               <p class="bio_desc">
