--- a/index.html
+++ b/index.html
@@ -194,13 +194,21 @@
               </p>
 
               <p class="bio_desc">
+                Registrace pro
                 <a
                   href="https://www.bestcoastpairings.com/event/tL2EixmZZ4PM"
                   target="_blank"
                   class="registration-link"
-                  >Registrace pro 40k</a
+                  >Warhammer 40,000</a
                 >
-                je již otevřena a propozice budou zveřejneny v následujících týdnech.
+                i pro
+                <a
+                  href="https://www.newrecruit.eu/app/tournydetails/details?id=690b9f3b53abb444afa2759f"
+                  target="_blank"
+                  class="registration-link"
+                  >The Old World</a
+                >
+                jsou již otevřeny a propozice budou zveřejneny v následujících týdnech.
               </p>
 
               <p class="bio_desc">
