--- a/warhammer40k.html
+++ b/warhammer40k.html
@@ -200,7 +200,7 @@
 
               <p class="bio_desc">
                 Sem něco co by se dalo nazvat jako casual turnajový hráč. Již přes deset let
-                organizuju jak pravidelné kompetetivní ligové akce, velké dvoudenní turnaje tak i
+                organizuju jak pravidelné kompetitivní ligové akce, velké dvoudenní turnaje tak i
                 akce určené pro úplné nováčky.
               </p>
 
