Removed tournament packs

--- a/warhammer40k.html
+++ b/warhammer40k.html
@@ -108,12 +108,12 @@
                 ><i class="fa-brands fa-facebook-f"></i
               ></a>
 
-              <a
+              <!-- <a
                 href="assets/doc/Propozice_GT_2025_40K_2_4.pdf"
                 target="_blank"
                 class="social_link download"
                 ><i class="fa-solid fa-file-arrow-down"></i
-              ></a>
+              ></a> -->
             </div>
           </div>
         </div>
@@ -235,7 +235,7 @@
         </div>
       </section>
 
-      <section class="work section" id="work">
+      <!-- <section class="work section" id="work">
         <div class="container">
           <div class="about_container">
             <div class="about_content">
@@ -259,7 +259,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <section class="work section" id="work">
         <div class="container">
