--- a/oldworld.html
+++ b/oldworld.html
@@ -108,12 +108,12 @@
                 ><i class="fa-brands fa-facebook-f"></i
               ></a>
 
-              <a
+              <!-- <a
                 href="https://docs.google.com/document/u/0/d/1skEIoem3iN3x-VPbv54uPk_j6E5nVxRAqdGjVf3Y9RI/mobilebasic"
                 target="_blank"
                 class="social_link download"
                 ><i class="fa-solid fa-file-arrow-down"></i
-              ></a>
+              ></a> -->
             </div>
           </div>
         </div>
@@ -208,7 +208,7 @@
         </div>
       </section>
 
-      <section class="work section" id="work">
+      <!-- <section class="work section" id="work">
         <div class="container">
           <div class="about_container">
             <div class="about_content">
@@ -235,7 +235,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <section class="work section" id="work">
         <div class="container">
