--- a/en/oldworld_en.html
+++ b/en/oldworld_en.html
@@ -56,6 +56,11 @@
               <a href="oldworld_en.html" class="nav_link">The Old World</a>
             </li>
             <li>
+              <a href="https://praguebowl.com/tournaments/spring-open/" class="nav_link"
+                >Blood Bowl</a
+              >
+            </li>
+            <li>
               <a href="#contact" class="nav_link">Contact</a>
             </li>
             <li class="dropdown">
