--- a/warhammer40k.html
+++ b/warhammer40k.html
@@ -54,6 +54,11 @@
               <a href="oldworld.html" class="nav_link">The Old World</a>
             </li>
             <li>
+              <a href="https://praguebowl.com/tournaments/spring-open/" class="nav_link"
+                >Blood Bowl</a
+              >
+            </li>
+            <li>
               <a href="#contact" class="nav_link">Kontakt</a>
             </li>
             <li class="dropdown">
