--- a/en/oldworld_en.html
+++ b/en/oldworld_en.html
@@ -154,17 +154,19 @@
                 </div>
               </div>
             </a>
-            <a href="https://praguegt.com/en/index_en.html" class="service_item_contact">
+
+            <a
+              href="https://www.newrecruit.eu/app/tournydetails/details?id=690b9f3b53abb444afa2759f"
+              class="service_item_contact"
+            >
               <div class="service_card_contact">
                 <div class="service_content">
-                  <h3 class="service_title text_center">
-                    <i class="fa-solid fa-chevron-left"></i> Back Home
-                  </h3>
+                  <h3 class="service_title text_center">Registration</h3>
 
-                  <p class="service_desc text_center">Back to homepage</p>
+                  <p class="service_desc text_center">Registration for the tournament</p>
                 </div>
                 <div class="service_icon_contact">
-                  <img src="../assets/img/home_l.png" alt="" class="title_shape" />
+                  <img src="../assets/img/partner/br_2.png" alt="" class="title_shape" />
                 </div>
               </div>
             </a>
