Removed old maps and tournament pack and added the new one.

--- a/en/index_en.html
+++ b/en/index_en.html
@@ -202,21 +202,28 @@
               </p>
 
               <p class="bio_desc">
-                Registrations for both
+                Warhammer 40,000
                 <a
                   href="https://www.bestcoastpairings.com/event/tL2EixmZZ4PM"
                   target="_blank"
                   class="registration-link"
-                  >Warhammer 40,000</a
+                  >registrations</a
                 >
                 and
+                <a
+                  href="../assets/doc/Propozice-GT-2026-40k-2.10-SINGLES.pdf"
+                  target="_blank"
+                  class="registration-link"
+                  >tournament pack</a
+                >
+                are up, as are the payments for the tournament (see tournament pack). The Old World
                 <a
                   href="https://www.newrecruit.eu/app/tournydetails/details?id=690b9f3b53abb444afa2759f"
                   target="_blank"
                   class="registration-link"
-                  >The Old World</a
+                  >registrations</a
                 >
-                are already open, and the tournament packs will be published in the coming weeks.
+                is also open, and the tournament pack will be published in the coming weeks.
               </p>
 
               <p class="bio_desc">
