--- a/en/warhammer40k_en.html
+++ b/en/warhammer40k_en.html
@@ -115,12 +115,12 @@
                 ><i class="fa-brands fa-facebook-f"></i
               ></a>
 
-              <!-- <a
-                href="../assets/doc/Propozice_GT_2025_40K_2_4.pdf"
+              <a
+                href="../assets/doc/Propozice-GT-2026-40k-2.10-SINGLES.pdf"
                 target="_blank"
                 class="social_link download"
                 ><i class="fa-solid fa-file-arrow-down"></i
-              ></a> -->
+              ></a>
             </div>
           </div>
         </div>
@@ -246,21 +246,19 @@
         </div>
       </section>
 
-      <!-- <section class="work section" id="work">
+      <section class="work section" id="work">
         <div class="container">
           <div class="about_container">
             <div class="about_content">
               <img src="../assets/img/dice2.png" alt="" class="img_cover" />
               <h3 class="bio">Propositions for download</h3>
 
-              <p class="bio_desc">
-                A downloadable document referring to the propositions for the game Warhammer 40,000.
-              </p>
+              <p class="bio_desc">Event pack for the Warhammer 40,000 tournament.</p>
 
               <div class="social_list">
                 <div class="about_buttons">
                   <a
-                    href="../assets/doc/Propozice_GT_2025_40K_2_4.pdf"
+                    href="../assets/doc/Propozice-GT-2026-40k-2.10-SINGLES.pdf"
                     target="_blank"
                     class="button"
                     ><i class="fa-solid fa-file-arrow-down padding_right"></i>Save</a
@@ -273,7 +271,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <section class="work section" id="work">
         <div class="container">
