--- a/warhammer40k.html
+++ b/warhammer40k.html
@@ -113,12 +113,12 @@
                 ><i class="fa-brands fa-facebook-f"></i
               ></a>
 
-              <!-- <a
-                href="assets/doc/Propozice_GT_2025_40K_2_4.pdf"
+              <a
+                href="assets/doc/Propozice-GT-2026-40k-2.10-SINGLES.pdf"
                 target="_blank"
                 class="social_link download"
                 ><i class="fa-solid fa-file-arrow-down"></i
-              ></a> -->
+              ></a>
             </div>
           </div>
         </div>
@@ -240,7 +240,7 @@
         </div>
       </section>
 
-      <!-- <section class="work section" id="work">
+      <section class="work section" id="work">
         <div class="container">
           <div class="about_container">
             <div class="about_content">
@@ -253,7 +253,10 @@
 
               <div class="social_list">
                 <div class="about_buttons">
-                  <a href="assets/doc/Propozice_GT_2025_40K_2_4.pdf" target="_blank" class="button"
+                  <a
+                    href="assets/doc/Propozice-GT-2026-40k-2.10-SINGLES.pdf"
+                    target="_blank"
+                    class="button"
                     ><i class="fa-solid fa-file-arrow-down padding_right"></i>Ulož</a
                   >
                 </div>
@@ -264,7 +267,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <section class="work section" id="work">
         <div class="container">
