--- a/index.html
+++ b/index.html
@@ -199,21 +199,28 @@
               </p>
 
               <p class="bio_desc">
-                Registrace pro
+                Warhammer 40,000
                 <a
                   href="https://www.bestcoastpairings.com/event/tL2EixmZZ4PM"
                   target="_blank"
                   class="registration-link"
-                  >Warhammer 40,000</a
+                  >registrace</a
                 >
-                i pro
+                i
+                <a
+                  href="assets/doc/Propozice-GT-2026-40k-2.10-SINGLES.pdf"
+                  target="_blank"
+                  class="registration-link"
+                  >propozice</a
+                >
+                jsou již k dispozici, stejně tak i platby za turnaj (viz propozice). The Old World
                 <a
                   href="https://www.newrecruit.eu/app/tournydetails/details?id=690b9f3b53abb444afa2759f"
                   target="_blank"
                   class="registration-link"
-                  >The Old World</a
+                  >registrace</a
                 >
-                jsou již otevřeny a propozice budou zveřejneny v následujících týdnech.
+                jsou také otevřeny a propozice budou zveřejneny v následujících týdnech.
               </p>
 
               <p class="bio_desc">
