--- a/en/warhammer40k_en.html
+++ b/en/warhammer40k_en.html
@@ -251,7 +251,7 @@
           <div class="about_container">
             <div class="about_content">
               <img src="../assets/img/dice2.png" alt="" class="img_cover" />
-              <h3 class="bio">Propositions for download</h3>
+              <h3 class="bio">Tournament pack</h3>
 
               <p class="bio_desc">Event pack for the Warhammer 40,000 tournament.</p>
 
