Updated to 2.12, and stopped versioning the uploaded filename.

--- a/en/index_en.html
+++ b/en/index_en.html
@@ -211,7 +211,7 @@
                 >
                 and
                 <a
-                  href="../assets/doc/Propozice-GT-2026-40k-2.11-SINGLES.pdf"
+                  href="../assets/doc/Propozice-GT-2026-40k-SINGLES-latest.pdf"
                   target="_blank"
                   class="registration-link"
                   >tournament pack</a
