--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 >
                 i
                 <a
-                  href="assets/doc/Propozice-GT-2026-40k-2.11-SINGLES.pdf"
+                  href="assets/doc/Propozice-GT-2026-40k-SINGLES-latest.pdf"
                   target="_blank"
                   class="registration-link"
                   >propozice</a
