--- a/warhammer40k.html
+++ b/warhammer40k.html
@@ -114,7 +114,7 @@
               ></a>
 
               <a
-                href="assets/doc/Propozice-GT-2026-40k-2.11-SINGLES.pdf"
+                href="assets/doc/Propozice-GT-2026-40k-SINGLES-latest.pdf"
                 target="_blank"
                 class="social_link download"
                 ><i class="fa-solid fa-file-arrow-down"></i
@@ -254,7 +254,7 @@
               <div class="social_list">
                 <div class="about_buttons">
                   <a
-                    href="assets/doc/Propozice-GT-2026-40k-2.11-SINGLES.pdf"
+                    href="assets/doc/Propozice-GT-2026-40k-SINGLES-latest.pdf"
                     target="_blank"
                     class="button"
                     ><i class="fa-solid fa-file-arrow-down padding_right"></i>Ulož</a
