Added TOW tournament pack

--- a/en/index_en.html
+++ b/en/index_en.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -202,28 +202,29 @@
               </p>
 
               <p class="bio_desc">
-                Warhammer 40,000
-                <a
+                Both Warhammer 40,000 and The Old World have registration (<a
                   href="https://www.bestcoastpairings.com/event/tL2EixmZZ4PM"
                   target="_blank"
                   class="registration-link"
-                  >registrations</a
-                >
-                and
-                <a
-                  href="../assets/doc/Propozice-GT-2026-40k-SINGLES-latest.pdf"
-                  target="_blank"
-                  class="registration-link"
-                  >tournament pack</a
-                >
-                are up, as are the payments for the tournament (see tournament pack). The Old World
+                  >40k</a
+                >,
                 <a
                   href="https://www.newrecruit.eu/app/tournydetails/details?id=690b9f3b53abb444afa2759f"
                   target="_blank"
                   class="registration-link"
-                  >registrations</a
-                >
-                is also open, and the tournament pack will be published in the coming weeks.
+                  >TOW</a
+                >) open and tournament packs (<a
+                  href="assets/doc/Propozice-GT-2026-40k-SINGLES-latest.pdf"
+                  target="_blank"
+                  class="registration-link"
+                  >40k</a
+                >,
+                <a
+                  href="https://docs.google.com/document/d/1er-lKMyRLqAGAT4ZV6RbzWxVMVlfsOUNUK7he5tNRPc/edit?usp=sharing"
+                  target="_blank"
+                  class="registration-link"
+                  >TOW</a
+                >) available.
               </p>
 
               <p class="bio_desc">
