--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="cs-cz">
   <head>
     <meta charset="utf-8" />
@@ -199,28 +199,29 @@
               </p>
 
               <p class="bio_desc">
-                Warhammer 40,000
-                <a
+                Warhammer 40,000 i The Old World maji k dispozici jak registrace (<a
                   href="https://www.bestcoastpairings.com/event/tL2EixmZZ4PM"
                   target="_blank"
                   class="registration-link"
-                  >registrace</a
-                >
-                i
-                <a
-                  href="assets/doc/Propozice-GT-2026-40k-SINGLES-latest.pdf"
-                  target="_blank"
-                  class="registration-link"
-                  >propozice</a
-                >
-                jsou již k dispozici, stejně tak i platby za turnaj (viz propozice). The Old World
+                  >40k</a
+                >,
                 <a
                   href="https://www.newrecruit.eu/app/tournydetails/details?id=690b9f3b53abb444afa2759f"
                   target="_blank"
                   class="registration-link"
-                  >registrace</a
-                >
-                jsou také otevřeny a propozice budou zveřejneny v následujících týdnech.
+                  >TOW</a
+                >) tak propozice (<a
+                  href="assets/doc/Propozice-GT-2026-40k-SINGLES-latest.pdf"
+                  target="_blank"
+                  class="registration-link"
+                  >40k</a
+                >,
+                <a
+                  href="https://docs.google.com/document/d/1er-lKMyRLqAGAT4ZV6RbzWxVMVlfsOUNUK7he5tNRPc/edit?usp=sharing"
+                  target="_blank"
+                  class="registration-link"
+                  >TOW</a
+                >).
               </p>
 
               <p class="bio_desc">
