--- a/oldworld.html
+++ b/oldworld.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="cs-cz">
   <head>
     <meta charset="utf-8" />
@@ -113,12 +113,12 @@
                 ><i class="fa-brands fa-facebook-f"></i
               ></a>
 
-              <!-- <a
-                href="https://docs.google.com/document/u/0/d/1skEIoem3iN3x-VPbv54uPk_j6E5nVxRAqdGjVf3Y9RI/mobilebasic"
+              <a
+                href="https://docs.google.com/document/d/1er-lKMyRLqAGAT4ZV6RbzWxVMVlfsOUNUK7he5tNRPc/edit?usp=sharing"
                 target="_blank"
                 class="social_link download"
                 ><i class="fa-solid fa-file-arrow-down"></i
-              ></a> -->
+              ></a>
             </div>
           </div>
         </div>
@@ -215,7 +215,7 @@
         </div>
       </section>
 
-      <!-- <section class="work section" id="work">
+      <section class="work section" id="work">
         <div class="container">
           <div class="about_container">
             <div class="about_content">
@@ -229,7 +229,7 @@
               <div class="social_list">
                 <div class="about_buttons">
                   <a
-                    href="https://docs.google.com/document/u/0/d/1skEIoem3iN3x-VPbv54uPk_j6E5nVxRAqdGjVf3Y9RI/mobilebasic"
+                    href="https://docs.google.com/document/d/1er-lKMyRLqAGAT4ZV6RbzWxVMVlfsOUNUK7he5tNRPc/edit?usp=sharing"
                     target="_blank"
                     class="button"
                     ><i class="fa-solid fa-file-arrow-down padding_right"></i>Propozice</a
@@ -242,7 +242,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <section class="work section" id="work">
         <div class="container">
