Updated Discord links

--- a/en/index_en.html
+++ b/en/index_en.html
@@ -100,7 +100,7 @@
             <h2 class="home_title">PRAGUE</h2>
 
             <div class="social_list">
-              <a href="https://discord.gg/HM4aGX8cba" target="_blank" class="social_link dicord"
+              <a href="https://discord.gg/t3G7FezHdw" target="_blank" class="social_link dicord"
                 ><i class="fa-brands fa-discord"></i
               ></a>
 
@@ -241,7 +241,7 @@
               </p>
 
               <div class="social_list">
-                <a href="https://discord.gg/HM4aGX8cba" target="_blank" class="social_link dicord"
+                <a href="https://discord.gg/t3G7FezHdw" target="_blank" class="social_link dicord"
                   ><i class="fa-brands fa-discord"></i
                 ></a>
 
