--- a/warhammer40k.html
+++ b/warhammer40k.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="cs-cz">
   <head>
     <meta charset="utf-8" />
@@ -98,7 +98,7 @@
             <h2 class="home_title">PRAGUE</h2>
 
             <div class="social_list">
-              <a href="https://discord.gg/HM4aGX8cba" target="_blank" class="social_link dicord"
+              <a href="https://discord.gg/t3G7FezHdw" target="_blank" class="social_link dicord"
                 ><i class="fa-brands fa-discord"></i
               ></a>
 
@@ -182,7 +182,15 @@
               src="https://www.youtube.com/embed/_ItqQ8Swukw?si=MB2uWdGK-t--N-pq"
               title="YouTube video player"
               frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allow="
+                accelerometer;
+                autoplay;
+                clipboard-write;
+                encrypted-media;
+                gyroscope;
+                picture-in-picture;
+                web-share;
+              "
               allowfullscreen
             >
             </iframe>
@@ -217,7 +225,7 @@
               </p>
 
               <div class="social_list">
-                <a href="https://discord.gg/HM4aGX8cba" target="_blank" class="social_link dicord"
+                <a href="https://discord.gg/t3G7FezHdw" target="_blank" class="social_link dicord"
                   ><i class="fa-brands fa-discord"></i
                 ></a>
 
@@ -395,7 +403,7 @@
 
           <div class="contact_container">
             <div class="about_container">
-              <a href="https://discord.gg/HM4aGX8cba" class="service_item_contact">
+              <a href="https://discord.gg/t3G7FezHdw" class="service_item_contact">
                 <div class="service_card_contact">
                   <div class="service_icon_contact">
                     <i class="fa-brands fa-discord padding_right"></i>
