--- a/en/oldworld_en.html
+++ b/en/oldworld_en.html
@@ -100,7 +100,7 @@
             <h2 class="home_title">PRAGUE</h2>
 
             <div class="social_list">
-              <a href="https://discord.gg/HM4aGX8cba" target="_blank" class="social_link dicord"
+              <a href="https://discord.gg/t3G7FezHdw" target="_blank" class="social_link dicord"
                 ><i class="fa-brands fa-discord"></i
               ></a>
 
@@ -195,7 +195,7 @@
               </p>
 
               <div class="social_list">
-                <a href="https://discord.gg/HM4aGX8cba" target="_blank" class="social_link dicord"
+                <a href="https://discord.gg/t3G7FezHdw" target="_blank" class="social_link dicord"
                   ><i class="fa-brands fa-discord"></i
                 ></a>
 
@@ -374,7 +374,7 @@
 
           <div class="contact_container">
             <div class="about_container">
-              <a href="https://discord.gg/HM4aGX8cba" class="service_item_contact">
+              <a href="https://discord.gg/t3G7FezHdw" class="service_item_contact">
                 <div class="service_card_contact">
                   <div class="service_icon_contact">
                     <i class="fa-brands fa-discord padding_right"></i>
